--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.5.1",
     "react-vertical-timeline-component": "^3.5.3",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.20.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
